[package]
name = "powerzones"
description = "A utility library for calculating cycling power zones using Hunter Allen's formula."
repository = "https://github.com/stevedoyle/powerzones"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["powerzones", "cycling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
